# oxiddd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GITFLOW.md  README.md  SECURITY.md  TODO.md  build_static.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: discovery.rs  hash.rs  io.rs  main.rs  ntp.rs
