[package]
name = "oxiddd"
version = "0.2.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance forensic disk imaging tool with verified NTP timestamping and binding hashes."
license = "GPL-3.0"
repository = "https://github.com/jolanallen/oxiddd"
homepage = "https://github.com/jolanallen/oxiddd"
readme = "README.md"
keywords = ["forensic", "dfir", "disk-image", "dd", "security"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
aligned-vec = "0.6.4"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5.15"
generic-array = "0.14.9"
hex = "0.4.3"
indicatif = "0.18.4"
nix = { version = "0.31.1", features = ["fs"] }
sha2 = "0.10.9"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
